fix package json

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DATABASE = nodejs-login
+DATABASE = id12829212_html5
 DATABASE_HOST = localhost
-DATABASE_USER = root
-DATABASE_PASSWORD =
+DATABASE_USER = id12829212_admin
+DATABASE_PASSWORD = J-~QYmX!w@6!x(h&
 JWT_SECRET = mysupersecretpassword
 JWT_EXPIRES_IN = 90
 JWT_COOKIE_EXPIRES = 90
